--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
                         src="https://images.pexels.com/photos/2379005/pexels-photo-2379005.jpeg" alt="User avatar" />
                 </figure>
 
+
                 <section class="content-area">
                     <section class="bio">
                         <p data-testid="test-user-bio" id="user-bio">
@@ -34,12 +35,15 @@
                     <nav aria-label="Social links" data-testid="test-user-social-links" class="social-nav">
                         <ul>
                             <li><a id="social-twitter" class="social-link" data-testid="test-user-social-twitter"
-                                    href="https://twitter.com/SugarcaneRoy1" target="_blank" rel="noopener noreferrer">Twitter</a>
+                                    href="https://twitter.com/SugarcaneRoy1" target="_blank"
+                                    rel="noopener noreferrer">Twitter</a>
                             </li>
                             <li><a id="social-github" class="social-link" data-testid="test-user-social-github"
-                                    href="https://github.com/billyRoyR" target="_blank" rel="noopener noreferrer">GitHub</a></li>
+                                    href="https://github.com/billyRoyR" target="_blank"
+                                    rel="noopener noreferrer">GitHub</a></li>
                             <li><a id="social-linkedin" class="social-link" data-testid="test-user-social-linkedin"
-                                    href="https://www.linkedin.com/in/elroi-samuel-adama-4a891632a" target="_blank" rel="noopener noreferrer">LinkedIn</a>
+                                    href="https://www.linkedin.com/in/elroi-samuel-adama-4a891632a" target="_blank"
+                                    rel="noopener noreferrer">LinkedIn</a>
                             </li>
                         </ul>
                     </nav>
@@ -62,6 +66,11 @@
                             </ul>
                         </section>
                     </div>
+
+                    <nav class="page-links">
+                        <a href="about-page.html" class="nav-link">About Me</a>
+                        <a href="contact-page.html" class="nav-link">Contact</a>
+                    </nav>
                 </section>
             </div>
         </article>
