--- a/about-page.html
+++ b/about-page.html
@@ -1,59 +1,78 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Roy - About Me</title>
+    <link rel="stylesheet" href="/css/style.css" />
+    <script src="/script/index.js"></script>
+  </head>
+  <body>
+    <header class="site-header">
+      <nav class="navbar" aria-label="Main Navigation">
+        <ul class="nav-list">
+          <li><a href="index.html">Home</a></li>
+          <li><a href="about-page.html" class="active">About</a></li>
+          <li><a href="contact-page.html"  >Contact</a></li>
+        </ul>
+      </nav>
+    </header>
 
-    <head>
-        <meta charset="UTF-8" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>About Me | Roy Samuel</title>
-        <link rel="stylesheet" href="/css/style.css" />
-        <script src="/script/index.js" defer></script>
-    </head>
-
-    <body>
-        <article>
-            <nav class="navbar">
-                <ul>
-                    <li><a href="index.html">Profile</a></li>
-                    <li><a href="about-page.html" class="active">About Me</a></li>
-                    <li><a href="contact-page.html">Contact</a></li>
-                </ul>
-            </nav>
-
-            <header class="info_details">
-                <h1>About Me</h1>
-            </header>
-
-            <section>
-                <h2>Bio</h2>
-                <p>I’m Roy. An aspiring Frontend Developer dedicated to building responsive,
+    <main class="container" data-testid="test-about-page">
+      <article class="profile-card">
+        <!-- <img
+          src=""
+          alt=""
+          aria-hidden="true"
+          class="pattern pattern-about"
+        /> -->
+        <div class="wrapper">
+          <header class="about-header">
+            <h2 class="about-title">About Me</h2>
+            <p class="about-description" data-testid="test-about-bio">
+              I’m Roy. An aspiring Frontend Developer dedicated to building responsive,
                     scalable, and good user experience web apps and pages. I enjoy transforming ideas into
-                    interactive designs that work seamlessly across all screen sizes.</p>
-            </section>
+                    interactive designs that work seamlessly across all screen sizes. :) 
+            </p>
+          </header>
 
-            <section>
-                <h2>Goals in This Program</h2>
-                <ul>
-                    <li>Enhance my understanding of building real-world projects</li>
-                    <li>Master responsive layouts and logic implementation in programming.</li>
-                    <li>Debugging and modern best practices in web dev.</li>
-                </ul>
-            </section>
+          <hr class="separator" />
 
-            <section>
-                <h2>Areas of Low Confidence</h2>
-                <p>To become more confident in problem-solving,
-                    however, I’m actively learning and practicing every day.</p>
-            </section>
+          <section data-testid="test-about-goals">
+            <h3 class="section-header">Goals in This Program</h3>
+            <p>
+                Enhance my understanding of building real-world projects, master responsive layouts and logic implementation in programming, debugging and modern best practices in web dev.
+            </p>
+          </section>
 
-            <section>
-                <h2>Note to Future Self</h2>
-                <p>Keep learning and building more projects, every line of code written is a step to success.
-                    </p>
-            </section>
+          <hr class="separator" />
 
-            <section>
-                <h2>Extra Thoughts</h2>
-                <p>I strongly believe in collaborating and learning from mentors and my peers, working as a team is key to growth and success.
-                    </p>
-            </section>
-        </article>
+          <section data-testid="test-about-confidence">
+            <h3 class="section-header">Areas of Low Confidence</h3>
+            <p>
+              I need to improve in backend integration logic, state management and more complex database implementation.
+            </p>
+          </section>
+
+          <hr class="separator" />
+
+          <section data-testid="test-about-future-note">
+            <h3 class="section-header">Note to Future Self</h3>
+            <p>
+                Keep learning and building more projects, every line of code written is a step to success.
+            </p>
+          </section>
+
+          <hr class="separator" />
+
+          <section data-testid="test-about-extra">
+            <h3 class="section-header">Extra Thoughts</h3>
+            <p>
+                I strongly believe in collaborating and learning from mentors and my peers, working as a team is key to growth and success.
+            </p>
+          </section>
+        </div>
+      </article>
+    </main>
+  </body>
+</html>
