--- a/contact-page.html
+++ b/contact-page.html
@@ -2,44 +2,71 @@
 <html lang="en">
 
     <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Contact Us</title>
-        <link rel="stylesheet" href="/css/style.css">
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <title>Contact Me - Roy Samuel</title>
+        <link rel="stylesheet" href="/css/style.css" />
         <script src="/script/index.js" defer></script>
     </head>
 
     <body>
-        <article>
-            <nav class="navbar">
-                <ul>
-                    <li><a href="index.html">Profile</a></li>
-                    <li><a href="about-page.html">About Me</a></li>
-                    <li><a href="contact-page.html" class="active">Contact</a></li>
+        <header class="site-header">
+            <nav class="navbar" aria-label="Main Navigation">
+                <ul class="nav-list">
+                    <li><a href="index.html" data-testid="nav-home">Home</a></li>
+                    <li><a href="about-page.html" data-testid="nav-about">About</a></li>
+                    <li><a class="active" href="contact-page.html" data-testid="nav-contact">Contact</a></li>
                 </ul>
             </nav>
+        </header>
 
-            <header class="info_details">
-                <h1>Contact Me</h1>
-            </header>
+        <main class="container" data-testid="test-contact-page">
+            <article class="profile-card">
+                <div class="wrapper">
+                    <header class="about-header">
+                        <h2 class="about-title">Contact Me</h2>
+                        <p class="about-description">
+                            Fill out the form below
+                            and I’ll get back to you as soon as possible.
+                        </p>
+                    </header>
 
-            <form id="contactForm">
-                <label for="name">Full Name:</label>
-                <input type="text" id="name" required />
+                    <form class="contact-form" novalidate>
+                        <div class="form-group">
+                            <label for="name">Full Name</label>
+                            <input type="text" id="name" name="name" data-testid="test-contact-name" required
+                                aria-describedby="error-name" />
+                            <p class="error-message" id="error-name" data-testid="test-contact-error-name"></p>
+                        </div>
 
-                <label for="email">Email:</label>
-                <input type="email" id="email" required />
+                        <div class="form-group">
+                            <label for="email">Email</label>
+                            <input type="email" id="email" name="email" data-testid="test-contact-email" required
+                                aria-describedby="error-email" />
+                            <p class="error-message" id="error-email" data-testid="test-contact-error-email"></p>
+                        </div>
 
-                <label for="subject">Subject:</label>
-                <input type="text" id="subject" required />
+                        <div class="form-group">
+                            <label for="subject">Subject</label>
+                            <input type="text" id="subject" name="subject" data-testid="test-contact-subject" required
+                                aria-describedby="error-subject" />
+                            <p class="error-message" id="error-subject" data-testid="test-contact-error-subject"></p>
+                        </div>
 
-                <label for="message">Message:</label>
-                <textarea id="message" required></textarea>
+                        <div class="form-group">
+                            <label for="message">Message</label>
+                            <textarea id="message" name="message" data-testid="test-contact-message" required
+                                minlength="10" aria-describedby="error-message"></textarea>
+                            <p class="error-message" id="error-message" data-testid="test-contact-error-message"></p>
+                        </div>
 
-                <button type="submit">Submit</button>
-                <p id="successMessage" class="success" aria-live="polite"></p>
-            </form>
-        </article>
+                        <button type="submit" data-testid="test-contact-submit">Send Message</button>
+                        <p class="success-message" data-testid="test-contact-success"></p>
+                    </form>
+                </div>
+            </article>
+        </main>
+
     </body>
 
 </html>
