--- a/index.html
+++ b/index.html
@@ -1,81 +1,107 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
 
     <head>
-        <meta charset="utf-8" />
-        <meta name="viewport" content="width=device-width,initial-scale=1" />
-        <title>Profile Card (Vanilla JS)</title>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <title>Roy - Profile Card</title>
         <link rel="stylesheet" href="/css/style.css" />
+        <script src="/script/index.js" defer></script>
     </head>
 
     <body>
-        <article class="profile-card" data-testid="test-profile-card">
-            <header aria-label="profile" class="profile-header">
-                <h2 data-testid="test-user-name">Elroi Samuel-Adama</h2>
-                <div class="time">
-                    <small>Current time (ms): <span id="user-time" data-testid="test-user-time">0</span></small>
-                </div>
-            </header>
+        <header class="site-header">
+            <nav class="navbar" aria-label="Main Navigation">
+                <ul class="nav-list">
+                    <li><a class="active" href="index.html" data-testid="nav-home">Home</a></li>
+                    <li><a href="about-page.html" data-testid="nav-about">About</a></li>
+                    <li><a href="contact-page.html" data-testid="nav-contact">Contact</a></li>
+                </ul>
+            </nav>
+        </header>
 
-            <div class="profile-body">
-                <figure class="avatar-figure">
-                    <img id="user-avatar" data-testid="test-user-avatar"
-                        src="https://images.pexels.com/photos/2379005/pexels-photo-2379005.jpeg" alt="User avatar" />
-                </figure>
+        <main class="container">
+            <article class="profile-card" data-testid="test-profile-card">
+                <div class="wrapper">
+                    <header class="profile-header">
+                        <figure class="profile-avatar-container">
+                            <img src="https://images.pexels.com/photos/2379005/pexels-photo-2379005.jpeg"
+                                alt="User Avatar"
+                                class="profile-avatar" data-testid="test-user-avatar" />
+                        </figure>
 
+                        <div class="profile-info-text">
+                            <h2 class="profile-name" data-testid="test-user-name">
+                                Roy Samuel-Adama
+                            </h2>
+                            <p class="profile-bio" data-testid="test-user-bio">
+                                Frontend developer, coffee enthusiast, and weekend hiker. I build accessible UI
+                                and love untangling layout bugs.
+                            </p>
+                            <p class="profile-time">
+                                Current Time (UTC ms):
+                                <strong id="user-time-ms" data-testid="test-user-time">Loading...</strong>
+                            </p>
+                        </div>
+                    </header>
 
-                <section class="content-area">
-                    <section class="bio">
-                        <p data-testid="test-user-bio" id="user-bio">
-                            Frontend developer, coffee enthusiast, and weekend hiker. I build accessible UI
-                            and love untangling layout bugs.
-                        </p>
-                    </section>
-
-                    <nav aria-label="Social links" data-testid="test-user-social-links" class="social-nav">
-                        <ul>
-                            <li><a id="social-twitter" class="social-link" data-testid="test-user-social-twitter"
-                                    href="https://twitter.com/SugarcaneRoy1" target="_blank"
-                                    rel="noopener noreferrer">Twitter</a>
+                    <nav aria-label="Social links">
+                        <h3 class="section-header">Connect</h3>
+                        <ul class="social-list" data-testid="test-user-social-links">
+                            <li>
+                                <a href="https://github.com/billyRoyR" target="_blank" rel="noopener noreferrer"
+                                    data-testid="test-user-social-github" aria-label="GitHub profile"
+                                    class="social-link">
+                                    <svg class="social-icon" width="20" height="20" viewBox="0 0 16 16"
+                                        fill="currentColor" xmlns="http://www.w3.org/2000/svg" aria-hidden="true"
+                                        focusable="false">
+                                        <path fill-rule="evenodd"
+                                            d="M8 0C3.58 0 0 3.58 0 8a8 8 0 005.47 7.59c.4.07.55-.17.55-.38 0-.19-.01-.82-.01-1.49-2 .37-2.53-.49-2.69-.94-.09-.23-.48-.94-.82-1.13-.28-.15-.68-.52-.01-.53.63-.01 1.08.58 1.23.82.72 1.21 1.87.87 2.33.66.07-.52.28-.87.51-1.07-1.78-.2-3.64-.89-3.64-3.95 0-.87.31-1.59.82-2.15-.08-.2-.36-1.02.08-2.12 0 0 .67-.22 2.2.82a7.6 7.6 0 012-.27c.68 0 1.36.09 2 .27 1.53-1.04 2.2-.82 2.2-.82.44 1.1.16 1.92.08 2.12.51.56.82 1.28.82 2.15 0 3.07-1.87 3.75-3.65 3.95.29.25.54.73.54 1.48 0 1.07-.01 1.93-.01 2.2 0 .21.15.46.55.38A8.01 8.01 0 0016 8c0-4.42-3.58-8-8-8z" />
+                                    </svg>
+                                    <span class="social-text">GitHub</span>
+                                </a>
                             </li>
-                            <li><a id="social-github" class="social-link" data-testid="test-user-social-github"
-                                    href="https://github.com/billyRoyR" target="_blank"
-                                    rel="noopener noreferrer">GitHub</a></li>
-                            <li><a id="social-linkedin" class="social-link" data-testid="test-user-social-linkedin"
-                                    href="https://www.linkedin.com/in/elroi-samuel-adama-4a891632a" target="_blank"
-                                    rel="noopener noreferrer">LinkedIn</a>
+
+                            <li>
+                                <a href="https://x.com/SugarcaneRoy1" target="_blank" rel="noopener noreferrer"
+                                    data-testid="test-user-social-x" aria-label="X profile" class="social-link">
+                                    <svg class="social-icon" xmlns="http://www.w3.org/2000/svg" fill="currentColor"
+                                        class="bi bi-twitter-x" viewBox="0 0 16 16" id="Twitter-X--Streamline-Bootstrap"
+                                        height="16" width="16">
+                                        <desc>
+                                            Twitter X Streamline Icon: https://streamlinehq.com
+                                        </desc>
+                                        <path
+                                            d="M12.6 0.75h2.454l-5.36 6.142L16 15.25h-4.937l-3.867 -5.07 -4.425 5.07H0.316l5.733 -6.57L0 0.75h5.063l3.495 4.633L12.601 0.75Zm-0.86 13.028h1.36L4.323 2.145H2.865z"
+                                            stroke-width="1"></path>
+                                    </svg>
+                                    <span class="social-text">Twitter</span>
+                                </a>
                             </li>
                         </ul>
                     </nav>
 
-                    <div class="flex-box">
-                        <section>
-                            <h4 id="hobbies-heading">Hobbies</h4>
-                            <ul data-testid="test-user-hobbies" id="user-hobbies">
-                                <li>Hiking</li>
-                                <li>Photography</li>
-                                <li>Reading</li>
-                            </ul>
-                        </section>
-
-                        <section>
-                            <h4 id="dislikes-heading">Dislikes</h4>
-                            <ul data-testid="test-user-dislikes" id="user-dislikes">
-                                <li>Unlabeled buttons</li>
-                                <li>Inaccessible color contrast</li>
-                            </ul>
-                        </section>
-                    </div>
-
-                    <nav class="page-links">
-                        <a href="about-page.html" class="nav-link">About Me</a>
-                        <a href="contact-page.html" class="nav-link">Contact</a>
-                    </nav>
-                </section>
-            </div>
-        </article>
-
-        <script type="module" src="/script/index.js"></script>
+                    <hr class="separator" />
+                    <section>
+                        <h3 class="section-header">Hobbies</h3>
+                        <ul class="data-list" data-testid="test-user-hobbies">
+                            <li>Football</li>
+                            <li>Coding</li>
+                            <li>Hitting the gym</li>
+                        </ul>
+                    </section>
+                    <hr class="separator" />
+                    <section>
+                        <h3 class="section-header">Dislikes</h3>
+                        <ul class="data-list" data-testid="test-user-dislikes">
+                            <li>Debugging code</li>
+                            <li>Slow internet</li>
+                            <li>Syntax errors</li>
+                        </ul>
+                    </section>
+                </div>
+            </article>
+        </main>
     </body>
 
 </html>
